--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
+    <!-- fonts link  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <!-- css link -->
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header>
 
+<body class="open-sans-fonts">
+    <header class="header_i">
+        <nav>
+            <h3 class="nav_title">Ma<span class="primary_style">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="#">Portfolio</a></li>
+                <li><a class="dark-2" href="#">Blog</a></li>
+                <li><a href=""><button class="p_btn">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner_content">
+                <h4 class="banner_h4 dark-2">Hi, I  am</h4>
+                <h1 class="banner_h1">Mary Hardy</h1>
+                <p class="banner_p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="p_btn">Download CV</button>
+                <button class="p_btn">Contact</button>
+            </div>
+            <img class="banner_img" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
@@ -18,4 +43,5 @@
 
     </footer>
 </body>
+
 </html>
