--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
         </nav>
         <div class="banner">
             <div class="banner_content">
-                <h4 class="banner_h4 dark-2">Hi, I  am</h4>
+                <h4 class="banner_h4 dark-2">Hi, I am</h4>
                 <h1 class="banner_h1">Mary Hardy</h1>
                 <p class="banner_p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="p_btn">Download CV</button>
-                <button class="p_btn">Contact</button>
+                <div class="btn_grp">
+                    <button class="p_btn b_btn1"><img class="btn_img" src="/images/icons/vector.png" alt=""> Download CV</button>
+                    <button class="p_btn b_btn2"><img class="btn_img" src="/images/icons/frame.png" alt="">Contact</button>
+                </div>
             </div>
             <img class="banner_img" src="images/hardy.png" alt="">
         </div>
