--- a/index.html
+++ b/index.html
@@ -1,49 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
 
     <!-- fonts link  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- css link -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body class="open-sans-fonts">
+  <body class="open-sans-fonts">
+    <!-- header start -->
     <header class="header_i">
-        <nav>
-            <h3 class="nav_title">Ma<span class="primary_style">r</span>y</h3>
-            <ul>
-                <li><a class="dark-2" href="#">Portfolio</a></li>
-                <li><a class="dark-2" href="#">Blog</a></li>
-                <li><a href=""><button class="p_btn">Hire Me</button></a></li>
-            </ul>
-        </nav>
-        <div class="banner">
-            <div class="banner_content">
-                <h4 class="banner_h4 dark-2">Hi, I am</h4>
-                <h1 class="banner_h1">Mary Hardy</h1>
-                <p class="banner_p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <div class="btn_grp">
-                    <button class="p_btn b_btn1"><img class="btn_img" src="/images/icons/vector.png" alt=""> Download CV</button>
-                    <button class="p_btn b_btn2"><img class="btn_img" src="/images/icons/frame.png" alt="">Contact</button>
-                </div>
-            </div>
-            <img class="banner_img" src="images/hardy.png" alt="">
+      <nav>
+        <h3 class="nav_title">Ma<span class="primary_style">r</span>y</h3>
+        <ul>
+          <li><a class="dark-2" href="#">Portfolio</a></li>
+          <li><a class="dark-2" href="#">Blog</a></li>
+          <li>
+            <a href=""><button class="p_btn">Hire Me</button></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner_content">
+          <h4 class="banner_h4 dark-2">Hi, I am</h4>
+          <h1 class="banner_h1">Mary Hardy</h1>
+          <p class="banner_p">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <div class="btn_grp">
+            <button class="p_btn b_btn1">
+              <img class="btn_img" src="/images/icons/vector.png" alt="" />
+              Download CV
+            </button>
+            <button class="p_btn b_btn2">
+              <img
+                class="btn_img"
+                src="/images/icons/frame.png"
+                alt=""
+              />Contact
+            </button>
+          </div>
         </div>
+        <img class="banner_img" src="images/hardy.png" alt="" />
+      </div>
     </header>
+    <!-- header end -->
+
+    <!-- main start  -->
     <main>
-
+      <section class="main_section">
+        <div class="main_div">
+          <h3 class="main_h3 common_h">About Me</h3>
+          <p class="main_p">
+            I, m a designer & developer with a passion for web design. I enjoy
+            developing simple, clean and slick websites that provide real value
+            to the end user. Thousands of clients have procured exceptional
+            results while working with me. Delivering work within time and
+            budget which meets clients requirements is our goal.
+          </p>
+          <div class="about_items">
+            <div class="about_item">
+              <p class="item_title">Name:</p>
+              <p class="item_description">Mary Hardy</p>
+            </div>
+            <div class="about_item">
+              <p class="item_title">Email:</p>
+              <p class="item_description">info@gmail.com</p>
+            </div>
+            <div class="about_item">
+              <p class="item_title">Date of birth:</p>
+              <p class="item_description">11 November 1987</p>
+            </div>
+            <div class="about_item">
+              <p class="item_title">From</p>
+              <p class="item_description">Los Angeles, USA</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
+    <!-- main end -->
 
-    </footer>
-</body>
-
+    <!-- footer start  -->
+    <footer></footer>
+    <!-- footer end -->
+  </body>
 </html>
