--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
     <!-- main start  -->
     <main>
+
+      <!-- about section -->
       <section class="main_section">
         <div class="main_div">
           <h3 class="main_h3 common_h">About Me</h3>
@@ -89,6 +91,36 @@
           </div>
         </div>
       </section>
+
+      <!-- main what i do start  -->
+      <section class="skills">
+        <h3 class="skill_title">What I do</h3>
+        <p class="skill_discription">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+        <div class="skill_container">
+            <div class="skill">
+              <img src="/images/icons/js.png" alt="">
+              <h4 class="s_title">Vanilla JavaScript</h4>
+              <p class="s_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+              <img src="/images/icons/react.png" alt="">
+              <h4 class="s_title">React</h4>
+              <p class="s_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+              <img src="/images/icons/nodejs.png" alt="">
+              <h4 class="s_title">Node.js</h4>
+              <p class="s_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+              <img src="images/icons/mongo.png" alt="">
+              <h4 class="s_title">MongoDB</h4>
+              <p class="s_description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+      </section>
+
     </main>
     <!-- main end -->
 
