--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- main start  -->
     <main>
 
-      <!-- about section -->
+      <!-- about section start -->
       <section class="main_section">
         <div class="main_div">
           <h3 class="main_h3 common_h">About Me</h3>
@@ -91,6 +91,7 @@
           </div>
         </div>
       </section>
+      <!-- about section end -->
 
       <!-- main what i do start  -->
       <section class="skills">
@@ -120,6 +121,61 @@
             </div>
         </div>
       </section>
+      <!-- main what i do end  -->
+
+
+      <!-- resume section start -->
+      <section class="resume">
+        <h3 class="resume_title">A summary of My Resume</h3>
+
+        <div class="resume_container">
+          <div class="resume_column">
+            <h3 class="resume_column_title">My Education</h3>
+            <div class="experience">
+              <h4 class="experience_title">Master in Computer Engineering</h4>
+              <h5 class="experience_sub_title">Harvard University / 2015 - 2017</h5>
+              <div class="experience_discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experience">
+              <h4 class="experience_title">Master in Computer Engineering</h4>
+              <h5 class="experience_sub_title">Harvard University / 2015 - 2017</h5>
+              <div class="experience_discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experience">
+              <h4 class="experience_title">Master in Computer Engineering</h4>
+              <h5 class="experience_sub_title">Harvard University / 2015 - 2017</h5>
+              <div class="experience_discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+          </div>
+          <div class="resume_column">
+            <h3 class="resume_column_title">My Experience</h3>
+            <div class="experience">
+              <h4 class="experience_title">Sr. Font End Developer</h4>
+              <h5 class="experience_sub_title">Apple Inc / 2020 - Current</h5>
+              <div class="experience_discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experience">
+              <h4 class="experience_title">Jr. Font End Developer</h4>
+              <h5 class="experience_sub_title">Dribbble Inc / 2018 - 2022</h5>
+              <div class="experience_discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experience">
+              <h4 class="experience_title">HTML Developer</h4>
+              <h5 class="experience_sub_title">Adobe Inc / 2017 - 2018</h5>
+              <div class="experience_discription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+          </div>
+        </div>
+        <button class="p_btn b_btn1 resume_button">
+              <img class="btn_img" src="/images/icons/vector.png" alt="" />
+              Download CV
+            </button>
+      </section>
+      <!-- resume section end -->
 
     </main>
     <!-- main end -->
