--- a/index.html
+++ b/index.html
@@ -176,12 +176,32 @@
             </button>
       </section>
       <!-- resume section end -->
-
+    
     </main>
     <!-- main end -->
 
     <!-- footer start  -->
-    <footer></footer>
+    <footer>
+        <div class="footer_column">
+          <h3 class="footer_title">Lets Connect</h3>
+          <p class="footer_discription">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <div class="social_links">
+            <a href=""><img src="/images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="/images/icons/insta.png" alt=""></a>
+          </div>
+        </div>
+        <div class="footer_column">
+          <h3 class="footer_title">Let’s Message me</h3>
+
+          <form class="contact" action="">
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="Your email">
+            <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+            <input class="p_btn" type="submit" value="Submit">
+          </form>
+        </div>
+    </footer>
     <!-- footer end -->
   </body>
 </html>
